# podnote

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Podnote.html  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.jsx  main.jsx  tokens.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  export.rs  lib.rs  library.rs  subscriptions.rs
app/src-tauri/src/pipeline/: agent.rs  asr.rs  correct.rs  glossary.rs  llm.rs  mod.rs  note.rs  resolve.rs  summarize.rs  tavily.rs  tts.rs  upload.rs  vocab.rs
app/src-tauri/tests/fixtures/: ep125-note.json
app/src/components/: core.jsx  instrument.jsx
app/src/fixtures/: ep143.json  research-events.json
app/src/lib/: audio.js  backend.js  fixtures.js  format.js  mock.js  research.js  theme.js
app/src/screens/: AddFlow.jsx  DemoApp.jsx  Empty.jsx  NoteView.jsx  QaDrawer.jsx  Rack.jsx  ResearchDrawer.jsx  Settings.jsx  Subscriptions.jsx  Transcript.jsx
design/: DESIGN-v4.md  Podnote-standalone.html  Podnote-v1.html  Podnote-v2.html  README.md
design/explorations/: 07-teenage-cassette.html  08-liquid-glass.html  09-dual-theme.html
prompts/: entities.md  meeting.md  note.md  qa.md  verify_blocks.md  verify_judge.md  verify_query.md
src/: asr.mjs  index.mjs  note.mjs  resolve.mjs  summarize.mjs  transcribe.mjs
